# Loggifyer

./: .gitignore  CMakeLists.txt  LoggifyerConfig.ini  Makefile  README.md  logFormat.conf
.github/workflows/: cicd.yml
includes/: Logger.hpp  Logger.inl  PTP_Loggifyer.hpp
includes/PTP/: CustomLogMacros.hpp  Loggifyer.hpp
includes/PTP/Loggifyer/: Logger.hpp  Logger.inl
srcs/: Logger.cpp
tests/: CMakeLists.txt  TestLoggifyer.cpp  testMain.cpp
